--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
     </div>
     <div class="separation"></div>
-      </div>
-    </div>
+  </div>
+  <section></section>
   </body>
 </html>
